--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE>
 <html>
   <body>
-    <p><a href=“http://www.t-kougei.ac.jp/index.html”></p>
+    <p><a href=“http://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
+    <br>
+    
     <p>順序なしリスト</p><br>
     <ul>
       <li>牛ばら肉</li>
