--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <h1>アンケート</h1>
     <form id="top" action="#" method="post">
-      <p><input type="text" name="input1"</p>
+      <p><input type="text" name="input1"></p>
       <p><input type="submit" value="送信">
       <input type="reset" value="取り消し"></p>
     </form><br>
