--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE>
 <html>
+  <head>
+  </head>
   <body>
     <p><a href=“http://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
     <br>
