--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <p><a href=“http://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
+    <p><a href=“https://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
     <br>
     
     <p>順序なしリスト</p><br>
