--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </form><br>
     
     <img src=“http://www.t-kougei.ac.jp/img_static/kogeiLogo.png” alt=“大学ロゴ” />
-    
+    <img src=“img_static/kogeiLogo.png” alt=“東京工芸大学ロゴ” />
+
   </body>
 </html>
