--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
+    二日目のカレー
   </head>
   <body>
     <p><a href=“https://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
@@ -50,7 +51,6 @@
     </form><br>
     
     <img src=“http://www.t-kougei.ac.jp/img_static/kogeiLogo.png” alt=“大学ロゴ” />
-    <img src=“img_static/kogeiLogo.png” alt=“東京工芸大学ロゴ” />
 
   </body>
 </html>
