--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE HTML>
 <html>
   <head>
-    二日目のカレー
+    <title>二日目のカレー</title>
   </head>
   <body>
     <p><a href=“https://www.t-kougei.ac.jp/index.html”>工芸大学の公式ページ</a>へのリンク</p>
